--- a/templates/selenoid-ui.service.j2
+++ b/templates/selenoid-ui.service.j2
@@ -1,6 +1,6 @@
 [Unit]
 Description=selenoid-ui
-{# Requires=consul-template.service #}
+Requires=consul.service
 StartLimitIntervalSec=120
 StartLimitBurst=20
 
