--- a/templates/selenoid-ui.service.j2
+++ b/templates/selenoid-ui.service.j2
@@ -6,7 +6,7 @@ Requires=consul.service
 Type=simple
 User=ggr
 GuessMainPID=true
-ExecStart={{ home_ggr }}/go-grid-router/selenoid-ui --selenoid-uri=http://127.0.0.1:8888
+ExecStart={{ home_ggr }}/go-grid-router/selenoid-ui --selenoid-uri=http://{{ ansible_host }}:8888
 ExecReload=/bin/kill -HUP $MAINPID
 ExecStop=/bin/kill -15 $MAINPID
 Restart=always
